<?xml version="1.0"?>
<package>
  <name>refills_cram_msgs</name>
  <version>0.0.0</version>
  <description>refills_cram_msgs</description>
  <maintainer email="stoermer@uni-bremen.de">Kevin Stoermer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
